--- a/ejemplos/index.html
+++ b/ejemplos/index.html
@@ -24,6 +24,4 @@
 
 		</p>
 	</body>
-</html
->
-<!--Se utiliza h1 hasta el h6 para los titulos "h1" es el mas grande y solo se puede usar una vez, la etiqueta <p></p> es para los parrafos la etiqueta <blockquote></blockquote> es para que un parrafo se vea como si fuera una cita o referencia de otro lado como por ejemplo de un libro la etiqueta <i></i> es para que el texto se vea con letra italica, la etiqueta <br/> es para hace un interlineado en el texto como si fuese un punto y aparte, la etiqueta <head></head> es para el titulo de la pagina, la etiqueta <b></b> es para que un texto se vea en negrita al igual que la etiqueta <strong></strong>, sin embargo la etiqueta strong es solo si quieres que el buscador reconozca esa palabra en caso de querer buscarla, lo mas recomendable es usar strong pocas veces y utilizar mas <b></b> y la etiqueta <cite></cite> es para colocar el autor de la cita o referencia se puede colocar el inicio o al final de la referencia, y la etiqueta <hr/> es para colocar una linea para separar informacion
+</html>
